force-app/main/default/objects/Visitation_Log__c/Visitation_Log__c.object-meta.xml
<CustomObject>
    <label>Visitation Log</label>
    <nameField>
        <displayFormat>VL-{0000}</displayFormat>
        <label>Visitation Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visitation Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>