force-app/main/default/objects/Visitation_Log__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Visitation Logs</relationshipLabel>
    <relationshipName>Visitation_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>