force-app/main/default/objects/Visitation_Log__c/fields/Conditions__c.field-meta.xml
<CustomField>
    <fullName>Conditions__c</fullName>
    <label>Conditions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Supervised</fullName>
            </value>
            <value>
                <fullName>Unsupervised</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>