force-app/main/default/objects/Visitation_Log__c/fields/Conditions_Comments__c.field-meta.xml
<CustomField>
    <fullName>Conditions_Comments__c</fullName>
    <label>Conditions Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>