force-app/main/default/objects/Visitation_Log__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Visitation Logs</relationshipLabel>
    <relationshipName>Visitation_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>