force-app/main/default/objects/Visitation_Log__c/fields/Investigation__c.field-meta.xml
<CustomField>
    <fullName>Investigation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investigation</label>
    <referenceTo>Investigation__c</referenceTo>
    <relationshipLabel>Visitation Logs</relationshipLabel>
    <relationshipName>Visitation_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>