force-app/main/default/objects/Visitation_Log__c/fields/Specify_any_other_participants_that_are__c.field-meta.xml
<CustomField>
    <fullName>Specify_any_other_participants_that_are__c</fullName>
    <inlineHelpText>Specify any other participants that are not members of this case</inlineHelpText>
    <label>Specify any other participants that are</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>